syntax = "proto3";

package weather;

option go_package = "../generated";

service WeatherService {
  rpc GetRealtimeWeather (WeatherRequest) returns (stream WeatherResponse);
  rpc GetForecastWeather (ForecastRequest) returns (stream ForecastResponse);
}

message WeatherRequest {
  string query = 1;
  string lang = 2;
}

message Location {
  string name = 1;
  string region = 2;
  string country = 3;
  double lat = 4;
  double lon = 5;
  string tz_id = 6;
  int64 localtime_epoch = 7;
  string localtime = 8;
}

message Condition {
  string text = 1;
  string icon = 2;
  int32 code = 3;
}

message CurrentWeather {
  int64 last_updated_epoch = 1;
  string last_updated = 2;
  double temp_c = 3;
  double temp_f = 4;
  int32 is_day = 5;
  Condition condition = 6;
  double wind_mph = 7;
  double wind_kph = 8;
  int32 wind_degree = 9;
  string wind_dir = 10;
  double pressure_mb = 11;
  double pressure_in = 12;
  double precip_mm = 13;
  double precip_in = 14;
  int32 humidity = 15;
  int32 cloud = 16;
  double feelslike_c = 17;
  double feelslike_f = 18;
  double windchill_c = 19;
  double windchill_f = 20;
  double heatindex_c = 21;
  double heatindex_f = 22;
  double dewpoint_c = 23;
  double dewpoint_f = 24;
  double vis_km = 25;
  double vis_miles = 26;
  double uv = 27;
  double gust_mph = 28;
  double gust_kph = 29;
}

message WeatherResponse {
  Location location = 1;
  CurrentWeather current = 2;
}

message ForecastRequest {
  string query = 1;
  string days = 2;
  string dt = 3;
  string unixdt = 4;
  string hour = 5;
  string lang = 6;
  string alerts = 7;
  string aqi = 8;
}

message Day {
  float maxtemp_c = 1;
  float maxtemp_f = 2;
  float mintemp_c = 3;
  float mintemp_f = 4;
  float avgtemp_c = 5;
  float avgtemp_f = 6;
  float maxwind_mph = 7;
  float maxwind_kph = 8;
  float totalprecip_mm = 9;
  float totalprecip_in = 10;
  float totalsnow_cm = 11;
  float avgvis_km = 12;
  float avgvis_miles = 13;
  int32 avghumidity = 14;
  int32 daily_will_it_rain = 15;
  int32 daily_chance_of_rain = 16;
  int32 daily_will_it_snow = 17;
  int32 daily_chance_of_snow = 18;
  Condition condition = 19;
  double uv = 20;
}

message Astro {
  string sunrise = 1;
  string sunset = 2;
  string moonrise = 3;
  string moonset = 4;
  string moon_phase = 5;
  int32 moon_illumination = 6;
  int32 is_moon_up = 7;
  int32 is_sun_up = 8;
}

message Hour {
  int64 time_epoch = 1;
  string time = 2;
  double temp_c = 3;
  double temp_f = 4;
  int32 is_day = 5;
  Condition condition = 6;
  double wind_mph = 7;
  double wind_kph = 8;
  int32 wind_degree = 9;
  string wind_dir = 10;
  double pressure_mb = 11;
  double pressure_in = 12;
  double precip_mm = 13;
  double precip_in = 14;
  double snow_cm = 15;
  int32 humidity = 16;
  int32 cloud = 17;
  double feelslike_c = 18;
  double feelslike_f = 19;
  double windchill_c = 20;
  double windchill_f = 21;
  double heatindex_c = 22;
  double heatindex_f = 23;
  double dewpoint_c = 24;
  double dewpoint_f = 25;
  int32 will_it_rain = 26;
  int32 chance_of_rain = 27;
  int32 will_it_snow = 28;
  int32 chance_of_snow = 29;
  double vis_km = 30;
  double vis_miles = 31;
  double gust_mph = 32;
  double gust_kph = 33;
  double uv = 34;
}

message ForecastDay {
  string date = 1;
  int64 date_epoch = 2;
  Day day = 3;
  Astro astro = 4;
  repeated Hour hour = 5;
}

message Forecast {
  repeated ForecastDay forecastday = 1;
}

message ForecastResponse {
  Location location = 1;
  CurrentWeather current = 2;
  Forecast forecast = 3;
}